Add assets for app logo and Bolt logo

--- a/UI/index.html
+++ b/UI/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#8B5CF6" />
-    <meta name="description" content=" - Remember the faces that matter. An App to help Alzheimer's patients recognize people." />
-    <title>MEMORIE - Remember the faces that matter</title>
+    <meta name="description" content="MEMORIE.IO - Remember the faces that matter. A PWA to help Alzheimer's patients recognize people." />
+    <title>memorie.io - Remember the faces that matter</title>
   </head>
   <body>
     <div id="root"></div>
